--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.3,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "iroha"
+name = "iroha2"
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Rust",
