--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ 3.12 ]
+        python-version: [ 3.8 ]
     steps:
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
@@ -41,7 +41,7 @@ jobs:
       name: pypi
       url: https://pypi.org/project/iroha2/
     permissions:
-      id-token: write  # IMPORTANT: mandatory for trusted publishing
+      id-token: write
     steps:
     - name: Download all the dists
       uses: actions/download-artifact@v4
